# csdp-rs

./: .gitignore  Cargo.toml  README.md  THREADING_FIX.md  VISUALIZATION.md  plot_results.py  presentation_outline.md
src/: flat.rs  lib.rs  main.rs  model.rs  test_rlsim.rs  utils.rs
src/algorithms/: algorithm1.rs  algorithm2.rs  algorithm3.rs  algorithm_csdp1.rs  algorithm_csdp2.rs  algorithm_csdp3.rs  algorithm_csdp4.rs  algorithm_csdp5.rs  algorithm_csdp_ppo.rs  algorithm_ff1.rs  algorithm_ff2.rs  algorithm_ff3.rs  algorithm_ff4.rs  algorithm_ff_multi1.rs  algorithm_ff_multi2.rs  algorithm_ff_ppo.rs  algorithm_ffsac.rs  mod.rs
src/dataset/: andor.rs  mod.rs  realtime_leader.rs  xor.rs
src/environment/: grid.rs  mod.rs  robot.rs  rocketsim.rs
src/layer/: basic.rs  bernoulli.rs  goodness.rs  lif.rs  mod.rs  one_hot.rs
src/layer/mod_signal/: mod.rs  multi_class.rs  reward_modulated.rs  standard.rs
src/models/: csdp_multi_model.rs  ff_model.rs  ff_multi_model.rs  mod.rs  rl_model1.rs  rl_model2.rs  rl_model3.rs  robot_model.rs
src/robot/: mod.rs  real_lerobot.rs
src/synapse/: csdp.rs  hebbian.rs  mod.rs
src/tools/: collect_training_data.rs  mnist_ff_multi.rs  playback_training_data.rs  teleoperate.rs  test_distributional.rs
src/visualization/: app.rs  mod.rs
tests/: test_critic_runaway.rs  test_csdp_explosion.rs  test_ff.rs  test_ff_multi.rs  test_logic.rs
