[package]
name = "custom_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1", features = ["cuda"] }
tqdm = "0.8.0"
