[package]
name = "custom_framework"
version = "0.1.0"
edition = "2024"

default-run = "custom_framework"

[[bin]]
name = "collect_data"
path = "src/tools/collect_training_data.rs"

[[bin]]
name = "playback_data"
path = "src/tools/playback_training_data.rs"

[[bin]]
name = "teleoperate"
path = "src/tools/teleoperate.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1", features = [
  "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1", features = [
  "cuda",
] }
rustypot = "1.3.0"
serialport = "4.8.1"
tqdm = "0.8.0"
crossterm = "0.29"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Visualization
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
winit = "0.30"
