[package]
name = "custom_framework"
version = "0.1.0"
edition = "2024"

default-run = "custom_framework"

[[bin]]
name = "collect_data"
path = "src/tools/collect_training_data.rs"

[[bin]]
name = "playback_data"
path = "src/tools/playback_training_data.rs"

[[bin]]
name = "teleoperate"
path = "src/tools/teleoperate.rs"

[[bin]]
name = "test_mnist_ff"
path = "src/tools/mnist_ff_multi.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", features = [
  "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", features = [
  "cuda",
] }
flate2 = "1.0"
rustypot = "1.3.0"
serialport = "4.8.1"
tqdm = "0.8.0"
crossterm = "0.29"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
intel-mkl-src = { version = "0.8.1", optional = true }
rocketsim_rs = "0.36.0"
log = "0.4"
ratatui = "0.30.0"
env_logger = "0.11.10"

[features]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]

# webcam
[dependencies.nokhwa]
version = "0.10"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu"]
